做文明人！去掉狗！

--- a/404.html
+++ b/404.html
@@ -75,7 +75,7 @@
                 <p><b>我们没有做出任何反抗</b></p>
                 <p>每个冬天，破窗户破门的缝隙中，袭来冷风</p>
                 <p><b>我们没有做出任何反抗</b></p>
-                <p>当我们被学校压迫至东七，被教管狗骑到脸上时</p>
+                <p>当我们被学校压迫至东七，被教管骑到脸上时</p>
                 <p><b>我们无力反抗</b></p>
                 <p>无力去争，无力去抢，只求清闲</p>
                 <hr>
